feat: Implementing JWT Authentication
