# src/modules/user/dtos/UserDTO.ts
@@ -8,8 +8,16 @@ interface IUserResponseDTO extends IUser {};
 
 interface IUserUpdateDTO extends IUserDTO {};
 
+interface IUserAuthDTO extends Required<Pick<IUser, "mail" | "password">> {};
+
+interface IUserAuthResponseDTO {
+    token: string
+};
+
 export {
     IUserDTO,
     IUserResponseDTO,
-    IUserUpdateDTO
-}
+    IUserUpdateDTO,
+    IUserAuthDTO,
+    IUserAuthResponseDTO
+};
